feat(checkout): implement UI and handle logic for checkout and payment flow

--- a/frontend/src/components/Layouts/components/Account/contents/index.css
+++ b/frontend/src/components/Layouts/components/Account/contents/index.css
@@ -1,4 +1,3 @@
-
 .ant-input:focus,
 .ant-input-password:hover,
 .ant-input-password:focus,
@@ -6,46 +5,48 @@
 .ant-input-textarea:focus,
 .ant-input-textarea-focused,
 .ant-select-selector:focus {
-  border-color: #664545 !important; /* Viền khi click vào */
-  box-shadow: 0 0 0 2px rgba(102, 69, 69, 0.2) !important; /* Hiệu ứng viền sáng nhẹ */
-}
-.ant-input, .ant-input-password {
-   border-color: #d9d9d9 !important;
-   border-radius: 6px !important;
-   
+  border-color: #1677ff !important;
+  /* Viền khi click vào */
+  box-shadow: 0 0 0 2px rgba(102, 69, 69, 0.2) !important;
+  /* Hiệu ứng viền sáng nhẹ */
 }
 
-.ant-select-selector:hover,
-.ant-select-selection .ant-input:hover .antd-select-show-arrow {
-  border-color: #664545 !important; 
+.ant-input,
+.ant-input-password {
+  border-color: #d9d9d9 !important;
+  border-radius: 6px !important;
+
+}
+
+
+.ant-select-selection .antd-select-show-arrow {
+  border-color: #1677ff !important;
 }
 
 .ant-select-item-option-active {
-  background-color: #664545 !important; 
-  color: white !important; 
+  background-color: #1677ff !important;
+  color: white !important;
 }
 
 .ant-select-dropdown .ant-select-item-option {
-  background-color: #ffffff !important; 
-  color: #000000 !important; 
+  background-color: #ffffff !important;
+  color: #000000 !important;
 }
 
 .ant-select-dropdown:hover {
   background-color: rgba(102, 69, 69, 0.1) !important;
 }
+
 .ant-select-selector:focus,
-.ant-select-selector:hover,
 .ant-select-selector:active,
 .ant-select-open .ant-select-selector {
-  border-color: #664545 !important; 
+  border-color: #1677ff !important;
 }
 
 .ant-select-open .ant-select-selector {
-  border-color: #664545 !important; 
+  border-color: #1677ff !important;
 }
+
 .ant-select-selector {
   border-color: #d9d9d9 !important;
 }
-
-
-
